[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/1floor/lunch_room.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=3]
[ext_resource path="res://scripts/1floor/lunch_room.gd" type="Script" id=15]
[ext_resource path="res://textures/furniture/dining_table.png" type="Texture" id=16]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.36169, 23.2118 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.4212, 2.56932 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.3118, 3.32846 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.0315, 69.1707 )

[node name="Node" type="Node"]
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -379.0
margin_top = -311.0
margin_right = 1376.0
margin_bottom = 851.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 551.643, 339.127 )
texture = ExtResource( 1 )

[node name="walls" type="StaticBody2D" parent="."]
position = Vector2( 440.143, 272.828 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls"]
use_parent_material = true
position = Vector2( 34.0426, -29.7198 )
polygon = PoolVector2Array( 57.1141, -74.7294, 57.1141, -85.0104, 74.4294, -84.4693, 74.9705, -74.4589, 151.942, -74.1883, 151.66, 30.983, 157.954, 30.9827, 158.479, 80.1086, 152.36, 79.9338, 151.66, 193.395, 106.206, 193.22, 105.157, 304.758, -3.0592, 305.282, -3.67957, -73.9968, -56.0309, 321.716, 124.388, 347.065, 212.054, 231.184, 237.324, -95.521, 44.1893, -120.791, -6.57898, -77.1978, -5.45639, -71.2521, -3.21887, -75.4058 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 613.875, 306.575 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 13.9306, -8.04816 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 533.999, 231 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 6.06977, -64.7314 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 536.627, 220.192 )

[node name="secret" type="Area2D" parent="."]
position = Vector2( 608.063, 425.184 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="secret"]
position = Vector2( -4.21173, 7.69449 )
shape = SubResource( 4 )

[node name="dining_table" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 541.964, 301.993 )
texture = ExtResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="dining_table"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dining_table/StaticBody2D"]
position = Vector2( -0.407837, 5.7174 )
shape = SubResource( 5 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 603.885, 349.086 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 519.0
margin_top = 232.0
margin_right = 565.0
margin_bottom = 312.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="secret" to="." method="_on_secret_body_entered"]
[connection signal="body_exited" from="secret" to="." method="_on_secret_body_exited"]
